--- a/app/src/main/res/layout/fragment_login_signin.xml
+++ b/app/src/main/res/layout/fragment_login_signin.xml
@@ -52,24 +52,14 @@
         android:id="@+id/signInLogIn"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="8dp"
+        android:layout_marginEnd="32dp"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="16dp"
         android:onClick="signUp"
         android:text="@string/signin"
-        app:layout_constraintEnd_toStartOf="@+id/signInAsGuest"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/signInForgetPw" />
-
-    <Button
-        android:id="@+id/signInAsGuest"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="32dp"
-        android:text="@string/signin_as_guest"
-        app:layout_constraintBaseline_toBaselineOf="@+id/signInLogIn"
-        app:layout_constraintEnd_toEndOf="parent" />
 
     <Button
         android:id="@+id/signInRegister"
@@ -77,7 +67,6 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="32dp"
         android:layout_marginStart="32dp"
-        android:layout_marginTop="8dp"
         android:onClick="openRegister"
         android:text="@string/register"
         app:layout_constraintEnd_toEndOf="parent"
