--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -34,7 +34,7 @@
 
                 <item
                     android:id="@+id/contactFormular"
-                    android:title="Kontaktformulas"/>
+                    android:title="Kontaktformular" />
 
 
                 <item
