--- a/app/src/main/res/values/stringsVeranstaltung.xml
+++ b/app/src/main/res/values/stringsVeranstaltung.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="add_pictures">Bilder hinzufügen</string>
+    <string name="placeholder">xxx</string>
+    <string name="arrow">arrow</string>
     <string-array name="veranstaltungs_header">
         <item>Gallerie</item>
         <item>Aufgaben</item>
