--- a/app/src/main/res/layout/fragment_home_party.xml
+++ b/app/src/main/res/layout/fragment_home_party.xml
@@ -63,12 +63,20 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layoutDirection="ltr"
             android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="64dp"
                 android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/imageView4"
+                    android:layout_width="match_parent"
+                    android:layout_height="64dp"
+                    android:layout_weight="1"
+                    app:srcCompat="@drawable/ic_launcher_background" />
 
                 <LinearLayout
                     android:layout_width="255dp"
@@ -94,13 +102,6 @@
                         android:layout_height="wrap_content"
                         android:text="Wann?: 30.02.2117, 19 Uhr" />
                 </LinearLayout>
-
-                <ImageView
-                    android:id="@+id/imageView4"
-                    android:layout_width="64dp"
-                    android:layout_height="64dp"
-                    android:layout_weight="2"
-                    app:srcCompat="@drawable/ic_launcher_background" />
 
             </LinearLayout>
 
