--- a/app/src/main/res/layout/activity_log_in.xml
+++ b/app/src/main/res/layout/activity_log_in.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -7,17 +8,32 @@
     android:orientation="vertical"
     tools:context="partyplaner.partyplaner.LogIn.LogInActivity">
 
-    <fragment
-        android:id="@+id/fragment3"
-        android:name="partyplaner.partyplaner.LogIn.LogoFragment"
+    <ImageView
+        android:id="@+id/imageView3"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        tools:layout="@layout/fragment_login_logo" />
+        android:layout_height="match_parent"
+        android:scaleType="fitEnd"
+        app:srcCompat="@drawable/people" />
 
-    <fragment
-        android:id="@+id/fragment4"
-        android:name="partyplaner.partyplaner.LogIn.SignInFragment"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        tools:layout="@layout/fragment_login_signin" />
-</LinearLayout>
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <fragment
+            android:id="@+id/fragment3"
+            android:name="partyplaner.partyplaner.LogIn.LogoFragment"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:layout="@layout/fragment_login_logo" />
+
+        <fragment
+            android:id="@+id/fragment4"
+            android:name="partyplaner.partyplaner.LogIn.SignInFragment"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:layout="@layout/fragment_login_signin" />
+
+    </LinearLayout>
+
+</FrameLayout>
