--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -22,18 +22,31 @@
         android:layout_height="wrap_content"
         tools:layout="@layout/fragment_register" />
     -->
-    <fragment
-        android:id="@+id/logo"
-        android:name="partyplaner.partyplaner.LogIn.LogoFragment"
+    <ImageView
+        android:id="@+id/imageView4"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        tools:layout="@layout/fragment_login_logo" />
+        android:layout_height="match_parent"
+        android:scaleType="fitEnd"
+        app:srcCompat="@drawable/people" />
 
-    <fragment
-        android:id="@+id/fragment"
-        android:name="partyplaner.partyplaner.LogIn.RegisterFragment"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        tools:layout="@layout/fragment_register" />
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
-</LinearLayout>
+        <fragment
+            android:id="@+id/logo"
+            android:name="partyplaner.partyplaner.LogIn.LogoFragment"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:layout="@layout/fragment_login_logo" />
+
+        <fragment
+            android:id="@+id/fragment"
+            android:name="partyplaner.partyplaner.LogIn.RegisterFragment"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            tools:layout="@layout/fragment_register" />
+    </LinearLayout>
+
+</FrameLayout>
