--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -33,6 +33,7 @@
                     android:id="@+id/FirstNameText"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_marginEnd="7dp"
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="20dp"
                     android:text="@string/vorname"
@@ -42,14 +43,14 @@
 
                 <EditText
                     android:id="@+id/FirstNameInput"
-                    android:labelFor="@+id/FirstNameInput"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="4dp"
+                    android:layout_marginEnd="83dp"
                     android:layout_marginTop="8dp"
                     android:ems="10"
                     android:inputType="textPersonName"
-                    app:layout_constraintEnd_toStartOf="@+id/imageView5"
+                    android:labelFor="@+id/FirstNameInput"
+                    app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/FirstNameText"
                     app:layout_constraintTop_toTopOf="parent" />
 
@@ -57,6 +58,7 @@
                     android:id="@+id/LastNameText"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_marginEnd="2dp"
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="15dp"
                     android:text="@string/nachname"
@@ -66,13 +68,13 @@
 
                 <EditText
                     android:id="@+id/LastNameInput"
-                    android:labelFor="@+id/LastNameInput"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginEnd="4dp"
+                    android:layout_marginEnd="83dp"
                     android:ems="10"
                     android:inputType="textPersonName"
-                    app:layout_constraintEnd_toStartOf="@+id/imageView5"
+                    android:labelFor="@+id/LastNameInput"
+                    app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/LastNameText"
                     app:layout_constraintTop_toBottomOf="@+id/FirstNameInput" />
 
@@ -89,13 +91,13 @@
 
                 <EditText
                     android:id="@+id/AdressTextInput"
-                    android:labelFor="@+id/AdressTextInput"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="83dp"
                     android:layout_marginStart="16dp"
                     android:ems="10"
                     android:inputType="textPersonName"
+                    android:labelFor="@+id/AdressTextInput"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/AdressText"
                     app:layout_constraintTop_toBottomOf="@+id/LastNameInput" />
@@ -113,12 +115,12 @@
 
                 <EditText
                     android:id="@+id/BirthdateInput"
-                    android:labelFor="@+id/BirthdateInput"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="83dp"
                     android:ems="10"
                     android:inputType="date"
+                    android:labelFor="@+id/BirthdateInput"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/BirthdateText"
                     app:layout_constraintTop_toBottomOf="@+id/AdressTextInput" />
@@ -127,6 +129,7 @@
                     android:id="@+id/EmailText"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
+                    android:layout_marginEnd="16dp"
                     android:layout_marginStart="8dp"
                     android:layout_marginTop="24dp"
                     android:text="@string/e_mail"
@@ -136,13 +139,14 @@
 
                 <EditText
                     android:id="@+id/EmailInput"
-                    android:labelFor="@+id/EmailInput"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="83dp"
                     android:ems="10"
                     android:inputType="textEmailSubject"
+                    android:labelFor="@+id/EmailInput"
                     app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toEndOf="@+id/EmailText"
                     app:layout_constraintTop_toBottomOf="@+id/BirthdateInput" />
 
                 <Button
