--- a/app/src/main/res/layout/fragment_create_poll_option.xml
+++ b/app/src/main/res/layout/fragment_create_poll_option.xml
@@ -8,21 +8,20 @@
 
     <TableRow
         android:layout_width="match_parent"
-        android:layout_height="match_parent" >
+        android:layout_height="match_parent">
 
         <EditText
             android:id="@+id/option"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_weight="0"
             android:ems="15"
-            android:layout_gravity="left"
             android:inputType="textPersonName" />
 
         <ImageView
-            android:id="@+id/imageView3"
+            android:id="@+id/btn_delete"
             android:layout_width="64dp"
             android:layout_height="64dp"
-            android:layout_gravity="right"
             android:layout_weight="1"
             app:srcCompat="@android:drawable/ic_menu_delete" />
     </TableRow>
