--- a/app/src/main/res/layout/event_fragment_single_poll.xml
+++ b/app/src/main/res/layout/event_fragment_single_poll.xml
@@ -5,42 +5,26 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:padding="4dp">
+    android:padding="8dp" android:baselineAligned="false">
 
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@android:color/black"
-        android:padding="2dp">
-
-    <LinearLayout
-        android:layout_width="match_parent"
+    <TextView
+        android:id="@+id/poll_name"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:background="@android:color/background_light"
-        android:orientation="horizontal"
-        android:paddingStart="8dp">
+        android:paddingTop="6dp"
+        android:text="@string/placeholder"
+        android:textColor="@android:color/black"
+        android:textSize="14sp" />
 
-        <TextView
-            android:id="@+id/poll_name"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_weight="1"
-            android:paddingTop="6dp"
-            android:text="TextView"
-            android:textColor="@android:color/black"
-            android:textSize="14sp"
-            tools:text="@string/placeholder" />
-
-        <ImageView
-            android:layout_width="64dp"
-            android:layout_height="32dp"
-            android:layout_weight="0"
-            android:paddingBottom="4dp"
-            android:paddingTop="4dp"
-            android:rotation="-90"
-            app:srcCompat="@drawable/arrow_icon" />
-    </LinearLayout>
-    </LinearLayout>
+    <ImageView
+        android:layout_width="64dp"
+        android:layout_height="32dp"
+        android:layout_weight="0"
+        android:contentDescription="@string/app_name"
+        android:paddingBottom="4dp"
+        android:paddingTop="4dp"
+        android:rotation="-90"
+        app:srcCompat="@drawable/arrow_icon" />
 
 </LinearLayout>
