--- a/app/src/main/res/layout/fragment_all_contacts.xml
+++ b/app/src/main/res/layout/fragment_all_contacts.xml
@@ -44,7 +44,8 @@
     <LinearLayout
         android:id="@+id/layout_all_single_contacts"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"></LinearLayout>
+        android:layout_height="455dp"
+        android:orientation="vertical"
+        app:layout_constraintTop_toBottomOf="@+id/layout_search_contact"></LinearLayout>
 
 </android.support.constraint.ConstraintLayout>
