--- a/app/src/main/res/layout/fragment_imprint.xml
+++ b/app/src/main/res/layout/fragment_imprint.xml
@@ -85,11 +85,13 @@
 
     <TextView
         android:id="@+id/DiscriptionText"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:text="@string/DescriptionText"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/VersionText" />
 </android.support.constraint.ConstraintLayout>
