--- a/app/src/main/res/layout/fragment_single_contact.xml
+++ b/app/src/main/res/layout/fragment_single_contact.xml
@@ -42,6 +42,5 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/contact"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="?android:attr/floatingToolbarOpenDrawable" />
+        app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
