--- a/app/src/main/res/layout/event_fragment_single_poll.xml
+++ b/app/src/main/res/layout/event_fragment_single_poll.xml
@@ -2,10 +2,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/single_poll"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:baselineAligned="false"
     android:orientation="horizontal"
-    android:padding="8dp" android:baselineAligned="false">
+    android:padding="8dp">
 
     <TextView
         android:id="@+id/poll_name"
