--- a/app/src/main/res/layout/fragment_single_contact.xml
+++ b/app/src/main/res/layout/fragment_single_contact.xml
@@ -32,7 +32,6 @@
         android:id="@+id/imageButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        app:srcCompat="?android:attr/floatingToolbarOpenDrawable" />
+        android:layout_weight="1" />
 
 </LinearLayout>
